[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[bdist_rpm]
release = rokua
requires =
    python3-base >= 3.4,
    python3-idna < 2.9,
    python3-idna >= 2.5,
    python3-certifi >= 2017.4.17,
    python3-chardet < 3.1.0,
    python3-chardet >= 3.0.2,
    python3-urllib3 < 1.26,
    python3-urllib3 >= 1.21.1
conflicts =
    python3-urllib3 == 1.25.0,
    python3-urllib3 == 1.25.1,
